added example cfg

--- a/exeAsShortcut.cfg
+++ b/exeAsShortcut.cfg
@@ -1,2 +1,2 @@
 currentDirectoryEnabled=False
-"Oregon\Binaries\WinGDK\Oregon-WinGDK-Shipping.exe"
+Oregon\Binaries\WinGDK\Oregon-WinGDK-Shipping.exe
